--- a/app/styles/modules/_main.scss
+++ b/app/styles/modules/_main.scss
@@ -26,7 +26,6 @@
 		h1{
 			font-weight: lighter;
 			color: $key;
-			margin-left: 20px;
 			&:first-child{
 				margin-top: 100px;
 			}
